- switched to older bootstrap - jquery included as a repository - fixed symlinks - removed some project references - form stuff and bootstrap theme for forms - twig templates neater now

--- a/src/view/index.twig
+++ b/src/view/index.twig
@@ -1,16 +1,2 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		{% include 'config.twig' %}
-		<script src="/js/jquery/jquery.js"></script>
-		<script src="/js/json2.js"></script>
-		<script src="/bootstrap/js/bootstrap.js"></script>
-		<link href="/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
-		<link href="/bootstrap/css/bootstrap-theme.css" rel="stylesheet" media="screen">
-	</head>
-	<body class="container">
-		<script>
-  		</script>
-		<h1>Badger</h1>
-	</body>
-</html>
+{% extends "common/base.twig" %}
+{% block content %}Index{% endblock %}
