--- a/src/view/common/base.twig
+++ b/src/view/common/base.twig
@@ -6,7 +6,7 @@
 		<script src="/js/jquery/jquery.js"></script>
 		<script src="/bootstrap/js/bootstrap.js"></script>
 		<link href="/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
-		<% endblock %}
+        {% endblock %}
 	</head>
 	<body class="container">
 		{% block content %}{% endblock %}
