fixing some permissions, adding a readme

--- a/src/view/common/config.twig
+++ b/src/view/common/config.twig
@@ -1,3 +1,3 @@
 <script type="text/javascript">
-	window.config = {{ app['config']['js_options']|json_encode|raw }};
+	window.config = {{ app['config']['js.options']|json_encode|raw }};
 </script>
