--- a/src/view/common/base.twig
+++ b/src/view/common/base.twig
@@ -3,9 +3,9 @@
 	<head>
 		{% block head %}
 		{% include "common/config.twig" %}
-		<script src="/js/jquery/jquery.js"></script>
-		<script src="/bootstrap/js/bootstrap.js"></script>
-		<link href="/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
+        <script src="{{ app.request_stack.getCurrentRequest.basePath }}/js/jquery/jquery.js"></script>
+        <script src="{{ app.request_stack.getCurrentRequest.basePath }}/bootstrap/js/bootstrap.js"></script>
+        <link href="{{ app.request_stack.getCurrentRequest.basePath }}/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
         {% endblock %}
 	</head>
 	<body class="container">
