--- a/src/view/common/base.twig
+++ b/src/view/common/base.twig
@@ -1,14 +1,45 @@
+{% set assetsUri = app.request_stack.getCurrentRequest.uriForPath('/')|replace({'/index.php': '', '/index_dev.php' : ''}) %}
 <!DOCTYPE html>
-<html>
-	<head>
-		{% block head %}
-		{% include "common/config.twig" %}
-        <script src="{{ app.request_stack.getCurrentRequest.basePath }}/js/jquery/jquery.js"></script>
-        <script src="{{ app.request_stack.getCurrentRequest.basePath }}/bootstrap/js/bootstrap.js"></script>
-        <link href="{{ app.request_stack.getCurrentRequest.basePath }}/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
+<html lang="en">
+    <head>
+        {% block head %}
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>Silex Skeleton</title>
+
+        <link href="{{ assetsUri }}/js/lib/vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet" media="screen">
+        <link href="{{ assetsUri }}/css/main.css" rel="stylesheet" media="screen">
+
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+
         {% endblock %}
-	</head>
-	<body class="container">
-		{% block content %}{% endblock %}
-	</body>
+    </head>
+    <body class="container-fluid {% block bodyclass %}{% endblock %}">
+
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Silex Skeleton</a>
+                </div>
+            </div>
+        </nav>
+
+        {% block content %}{% endblock %}
+
+        <script src="{{ assetsUri }}/js/lib/vendor/jquery/dist/jquery.js"></script>
+        <script src="{{ assetsUri }}/js/lib/vendor/bootstrap/dist/js/bootstrap.js"></script>
+    </body>
 </html>
