--- a/src/view/index.twig
+++ b/src/view/index.twig
@@ -1,2 +1,14 @@
+{% block bodyclass %}index{% endblock %}
 {% extends "common/base.twig" %}
-{% block content %}Index{% endblock %}
+
+{% block content %}
+
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Hello, world!</h1>
+            <p>It works!</p>
+            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        </div>
+    </div>
+    
+{% endblock %}
